Fix unnecessary vertical scrollbar in ag-grid; add minor CSS changes

--- a/src/styles/_academy.scss
+++ b/src/styles/_academy.scss
@@ -200,21 +200,54 @@
    */
   .ag-body-container {
     display: block;
+    // Override ag-grid style to suppress unnecessary vertical scrollbar (bugfix)
+    margin-bottom: 0;
   }
-  .ag-grid-export-button {
-    margin-top: 20px;
+
+  .pt-icon {
+    // Vertically centre appearance of blueprintjs icons in ag-grid
+    margin-top: 5px;
+  }
+
+  .ag-paging-panel {
+    border-top: none;
   }
 }
 
-.ag-header-cell-label {
-  justify-content: center;
-  font-weight: bold;
-  padding-left: 15px;
+.ag-grid-controls {
+  display: flex;
+  justify-content: space-between;
+
+  .pt-icon {
+    // Remove unnecessary margin to right when button text is hidden
+    margin-right: 0;
+  }
+
+  .ag-grid-button-text {
+    margin-left: 7px;
+  }
+}
+
+.ag-header-cell.ag-header-cell.ag-header-cell {
+  // Chain selectors for increased specificity
+  // Reduce internal padding of header cells
+  padding-left: 0.375em;
+  padding-right: 0.375em;
+
+  .ag-header-cell-label {
+    // Increase font size of headers; pad left to centre with filter icon
+    font-size: 1.1em;
+    font-weight: bold;
+    justify-content: center;
+    padding-left: 1em;
+  }
 }
 
 .ag-cell {
-  padding-top: 4px;
-  justify-content: center;
+  font-size: 1.1em;
+  // Override to reduce ag-grid default padding
+  padding-left: 0.375em !important;
+  padding-right: 0.375em !important;
   text-align: center;
 }
 
